# bash.d

./: .bashrc  .bashrc.backup  .bashrc.minimal  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AI_INTEGRATION_SUMMARY.md  AUTONOMOUS_APP_BUILDER.md  COMPREHENSIVE_FUNCTION_ANALYSIS_REPORT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  MASTER_INDEX.md  MASTER_TASK_LIST.md  MULTIAGENT_README.md  Makefile  QUICKSTART.md  README-Agent-Zero-Cloudflare.md  README.md  README_AGENTIC_SYSTEM.md  README_NEW.md  RECENT_CHANGES_SUMMARY.md  RECOMMENDATIONS_20251127T084719Z.md  SCRIPT_LIBRARY.md  SECURITY_INTEGRATION_COMPLETE.md  SWARM_IMPLEMENTATION_SUMMARY.md  TOOLS_IMPLEMENTATION_SUMMARY.md  agent_config_tools_manager_architecture.md  agents.md  bashd  bashrc  bootstrap.sh  demo_autonomous_builder.py  docker-compose.yml  features.md  install-bash-it.sh  (+26 more)
.index/: master_index.json  stats.json
agents/: __init__.py  api_server.py  application_builder.py  autonomous_crew.py  base.py  crew.py  demo_multiagent.py  hierarchy.py  main.py  master_agent.py  orchestrator.py  problem_solver.py  problem_solving.py  skeletons.py  swarm.py  ui_generator.py  voting.py
ai/: agent.py  ai_agent_monitor_tui.py
aliases/: docker.aliases.bash  general.aliases.bash  git.aliases.bash
apis/: api_manager.sh
bash_aliases.d/: core.sh
bash_env.d/: path.sh
bash_functions.d/: 90_unified_library.sh  CLI_TOOLS_README.md  COMPREHENSIVE_TESTING_GUIDE.md  INVENTORY_ANALYSIS.md  ORGANIZATION_PLAN.md  README-bash-utils.md  README.md  README_github_deploy.md  ai.sh  core.sh  dotfiles.sh  install_agentzero.sh  install_ai_tools.sh  install_cline.sh  install_gemini.sh  install_kilo.sh  install_mistral.sh  install_opencode.sh  install_qwen.sh  ip_analyzer.sh  launch_agent_zero.sh  script_inventory.json  secrets.sh  wipe_drive.sh
bash_prompt.d/: prompt.sh
bitlocker/: README.md
completions/: bashd.completion.bash  git.completion.bash  search_completions.bash
config/: SYSTEM_INDEX.json  agents.md  backup.yaml  bitlocker-mount-prompt.service  bitlocker-mount.service  default.yaml  docker-compose.yml  logger.yaml
configs/: agent_schema.yaml  agents_catalog_configs.yaml
crewai_config/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py
data/: agents.md
docs/: AI_AGENT_ONBOARDING.md  ALGORITHMS_INTEGRATION.md  ALGORITHM_REFERENCE.md  BITWARDEN_INTEGRATION.md  CONTRIBUTING.md  GEMINI.md  INDEX.md  MULTIAGENT_IMPROVEMENTS.md  MULTIAGENT_SYSTEM.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  REORGANIZATION_SUMMARY.md  SEARCH_SYSTEM.md  SWARM_SYSTEM.md  TASK_TRACKING.md  TOOLS_OVERVIEW.md  TOOLS_README.md  agents.md  api.md  architecture.md  changelog.md  developer_guide.md  features.md  project_summary.md  roadmap.md  security.md  security_complete_guide.md  security_tools.md  setup_guide.md  srs.md  tasks.md  tools_security_index.md  usage.md  user_guide.md  vscode.md
dotfiles/: bashrc
examples/: algorithm_examples.py  blog-platform.json  chat-application.json  comprehensive_demo.py  ecommerce-platform.json  master_agent_example.py  swarm_demo.py  task-manager-api.json
infrastructure/: agents.md
lib/: bash-it-compat.sh  bash-it-integration.sh  bash-it-plugin.bash  config_manager.py  indexer.sh  module-manager.sh  module_registry.py
mcp/: README.md
multi-agent-collaboration-system/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  agents.md  config.json  features.md  pyproject.toml  requirements.txt  rules.md  srs.md  tasks.md
os-config/: QUICKSTART.md  README.md  backup-system.sh  restore-system.sh  test-collectors.sh
platform/: agents.md  blog_engine.sh  data_portal.sh
plugins/: agents.md  ai_tools.sh  bashd-core.plugin.bash  bitwarden.sh  cloudflare.sh  government.sh
scripts/: README.md  add_github_secret.py  ai_agent.sh  ai_agents.sh  ai_sys_agent.sh  backup.sh  bashd_cli.py  bootstrap_dotfiles.sh  build_app.py  conversation_logger.sh  create_cloudflare_api_token.sh  debug_agent.sh  documentation_crew.py  extract_key.py  function_extractor.py  generate_agent_files.py  generate_agents.py  generate_docs.py  get_openrouter_key.sh  install_ai_tools.sh  inventory.sh  menu.sh  monitor.sh  multi_agent.py  project_health.py  protonvpn_network_report.sh  remediation_agent.py  schema_generator.py  setup.sh  setup_api_key.sh  setup_security_tools.sh  simple_agent_generator.py  start_app_builder.sh  start_system.sh  stop_app_builder.sh  sync_agent_configs.py  sync_bitwarden_to_cf_secrets.sh  system_analyzer.sh  system_log_analyzer.sh  test_all_security_functions.sh  (+4 more)
src/: agents.md  core.sh  security.sh
telemetry/: README.md  etl.py  otel.py  rag.py  requirements.txt  tui_launcher.py
tests/: agents.md  conftest.py  test_framework.py  test_integration.py  (+2 more)
tools/: base.py  (+11 more)
(+865 files in other folders)
